--- a/package.json
+++ b/package.json
@@ -3,17 +3,34 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-boost": "^0.4.7",
+    "apollo-server": "^2.11.0",
+    "dotenv": "^8.2.0",
+    "graphql": "^14.6.0",
+    "i18next": "^19.3.3",
+    "mongoose": "^5.9.5",
+    "node-sass": "^4.13.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.3",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.0"
+    "react-i18next": "^11.3.4",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.0",
+    "validator": "^13.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "npx nodemon ./server/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test-server": "npx jest --watch server",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -30,5 +47,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "apollo-server-testing": "^2.11.0",
+    "nodemon": "^2.0.2"
   }
 }
